Mon Nov 12 13:02:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1361_Regression/run_test.pl:
          Use PerlACE::wait_interval_for_process_creation

Mon Nov 12 11:48:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2289_Regression/run_test.pl:
          Added support for VxWorks cross platform testing

        * tests/Bug_2936_Regression/run_test.pl:
        * tests/Bug_2953_Regression/run_test.pl:
          Simplified these files

Mon Nov 12 09:48:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2869_Regression/run_test.pl:
          Simplified this file

Mon Nov 12 09:25:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2734_Regression/*:
          Build client/server here instead of using them from a different test.
          Fixes issues on VxWorks

Mon Nov 12 08:54:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

          Changed the way how portable interceptors relate to connection
          establishment. A few years ago the connection was setup after the
          send_request client interceptor call, this was changed with some
          refactoring. The send_request was now called after the connection
          establishment, as a result, if the connection establishment failed,
          the receive_exception method on the client request interceptor
          wasn't called. With this behaviour it is not possible to implement
          a FT app with just interceptors, you need a TAO specific endpoint
          selector. The change I made is to move the connection establishment
          after the send_request. As a result in the send_request it can
          happen that there is no transport selected, at that moment
          retrieving transport current (which is TAO specific) will give a
          NoContext exception.

          This fixes bugzilla 2133, 3079, and 3080. Thanks to Simon McQueen