@@ -1,3 +1,12 @@
+Mon Nov 12 13:59:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Bug_2174_Regression/run_test.pl:
+        * tests/Bug_2183_Regression/run_test.pl:
+        * tests/Bug_2234_Regression/run_test.pl:
+        * tests/Bug_2328_Regression/run_test.pl:
+        * tests/Bug_2804_Regression/run_test.pl:
+          Improved VxWorks cross platform testing
+
 Mon Nov 12 13:02:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Bug_1361_Regression/run_test.pl:
